// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. general tests: media queries - {"fontSize":24,"margin":12,"@media (max-width: 641px)":{"fontSize":20,"margin":10}} 1`] = `
.c0 {
  font-size: 24px;
}

.c1 {
  margin: 12px;
}

@media (max-width: 641px) {
  .c2 {
    font-size: 20px;
  }
}

@media (max-width: 641px) {
  .c3 {
    margin: 10px;
  }
}

<div
  className="c0 c1 c2 c3"
/>
`;

exports[`2. general tests: pseudo elements - {"& button":{"color":"green"}} 1`] = `
.c0 & button {
  color: green;
}

<div
  className="c0"
/>
`;

exports[`3. general tests: pseudo states - {":hover":{"backgroundColor":"blue"}} 1`] = `
.c0:hover {
  background-color: blue;
}

<div
  className="c0"
/>
`;

exports[`doesn't mess up stuff that does't have styles 1`] = `<div />`;

exports[`enzyme.mount 1`] = `
.c3 {
  padding: 4em;
}

.c4 {
  background: papayawhip;
}

.c0 {
  font-size: 1.5em;
}

.c1 {
  text-align: center;
}

.c2 {
  color: palevioletred;
}

<Wrapper>
  <section
    className="c3 c4"
  >
    <Title>
      <h1
        className="c0 c1 c2"
      >
        Hello World, this is my first glamor styled component!
      </h1>
    </Title>
  </section>
</Wrapper>
`;

exports[`enzyme.render 1`] = `
.c3 {
  padding: 4em;
}

.c4 {
  background: papayawhip;
}

.c0 {
  font-size: 1.5em;
}

.c1 {
  text-align: center;
}

.c2 {
  color: palevioletred;
}

<section
  class="c3 c4"
>
  <h1
    class="c0 c1 c2"
  >
    Hello World, this is my first glamor styled component!
  </h1>
</section>
`;

exports[`enzyme.shallow 1`] = `
.c0 {
  padding: 4em;
}

.c1 {
  background: papayawhip;
}

<section
  className="c0 c1"
>
  <Title>
    Hello World, this is my first glamor styled component!
  </Title>
</section>
`;

exports[`react-test-renderer 1`] = `
.c3 {
  padding: 4em;
}

.c4 {
  background: papayawhip;
}

.c0 {
  font-size: 1.5em;
}

.c1 {
  text-align: center;
}

.c2 {
  color: palevioletred;
}

<section
  className="c3 c4"
>
  <h1
    className="c0 c1 c2"
  >
    Hello World, this is my first glamor styled component!
  </h1>
</section>
`;

exports[`works when the root element does not have styles 1`] = `
.c0 {
  padding: 4em;
}

.c1 {
  background: papayawhip;
}

<div>
  <section
    className="c0 c1"
  />
</div>
`;
